MGS-1261 BUG SG logo flickering on IE11

--- a/resources/scss/components/_component.site-brand.scss
+++ b/resources/scss/components/_component.site-brand.scss
@@ -30,6 +30,14 @@
   .site-brand {
     height: 72px;
     position: absolute;
+
+    &__logo {
+      @include transition(all 0);
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
   }
 }
 
